# FlowDesk

./: .gitignore  AGENTS.md  README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260417_0001_initial_schema.py  20260420_0002_allow_journal_task_links.py  20260423_0003_note_blocks.py
backend/src/flowdesk/: __init__.py  main.py
backend/src/flowdesk/api/: __init__.py  router.py
backend/src/flowdesk/api/routes/: __init__.py  experiments.py  health.py  notes.py  references.py  scheduled_blocks.py  tasks.py
backend/src/flowdesk/core/: __init__.py  settings.py
backend/src/flowdesk/db/: __init__.py  base.py  models.py  session.py
backend/src/flowdesk/domain/: __init__.py
backend/src/flowdesk/schemas/: __init__.py  experiments.py  notes.py  references.py  scheduled_blocks.py  tasks.py
backend/src/flowdesk/services/: __init__.py  experiments.py  notes.py  references.py  scheduled_blocks.py  tasks.py
backend/tests/: conftest.py  test_experiments_api.py  test_health.py  test_notes_api.py  test_references_api.py  test_scheduled_blocks_api.py  test_tasks_api.py
docs/: design-checkpoint.md  ux-redesign-plan.md
docs/adr/: 0001-monorepo-and-delivery-shape.md  0002-application-architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/features/calendar/: CalendarPage.tsx
frontend/src/shared/: api.ts  forms.tsx  github.ts  labels.ts  notes.tsx  plannedSessions.tsx  styles.css
scripts/: dev.sh
(+7 files in other folders)
