[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "flowdesk"
version = "0.1.0"
description = "Backend services for the Flow Desk local-first HPC task cockpit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flowdesk"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.alembic]
script_location = "alembic"

[tool.ruff]
line-length = 100
target-version = "py312"
